fixed html and css

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@ Lab 3 ITMD 362
 <html lang="en" class="nojs">
 <head>
   <title>HTML Form Elements</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" />
-  <link rel="stylesheet" media="screen" href="css/meyers_and_normalize-form_reset.css" />
-  <link rel="stylesheet" media="screen" href="css/screen.css" />
+  <meta charset="utf-8">
+  <meta name="viewport">
+  <link rel="stylesheet" media="screen" href="css/meyers_and_normalize-form_reset.css">
+  <link rel="stylesheet" media="screen" href="css/screen.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <!-- Additional fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
