--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Lab 3 ITMD 362
 <head>
   <title>HTML Form Elements</title>
   <meta charset="utf-8">
-  <meta name="viewport">
+  <meta name="viewport" content="viewport">
   <link rel="stylesheet" media="screen" href="css/meyers_and_normalize-form_reset.css">
   <link rel="stylesheet" media="screen" href="css/screen.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,14 +27,14 @@ Lab 3 ITMD 362
     <ol>
       <li id="input-email">
         <label for="email">Email</label>
-        <input type="email" name="email" id="email" pattern="^.+@.+$" />
+        <input type="email" name="email" id="email" pattern="^.+@.+$">
       </li>
       <li id="input-age-verification">
-        <input type="checkbox" id="age-verification" name="age-verification" value="18" />
+        <input type="checkbox" id="age-verification" name="age-verification" value="18">
         <label for="age-verification">I am over 18 years old</label>
       </li>
       <li id="input-submit">
-        <input type="submit" name="submit" id="submit" value="Subscribe" />
+        <input type="submit" name="submit" id="submit" value="Subscribe">
       </li>
     </ol>
   </form>
